<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.inclass12.SignUp">


    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextFirstName"
        android:layout_below="@+id/editTextFirstName"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        android:layout_alignLeft="@+id/editTextFirstName" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextLastName"
        android:layout_below="@+id/editTextLastName"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:layout_alignLeft="@+id/editTextLastName" />

    <EditText
        android:id="@+id/editTextChoosePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editTextEmail"
        android:layout_below="@+id/editTextEmail"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:hint="Choose Password"
        android:inputType="textPassword"
        android:layout_alignRight="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextRepeatPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextChoosePassword"
        android:layout_below="@+id/editTextChoosePassword"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="Repeat Password"
        android:inputType="textPassword"
        android:layout_alignLeft="@+id/editTextChoosePassword" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editTextRepeatPassword"
        android:layout_below="@+id/editTextRepeatPassword"
        android:layout_marginTop="28dp"
        android:text="@string/Cancel"
        android:layout_alignLeft="@+id/editTextRepeatPassword" />

    <Button
        android:id="@+id/btnSignUpOnSignUpPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editTextRepeatPassword"
        android:layout_alignTop="@+id/btnCancel"
        android:text="@string/SignUp"
        android:layout_alignRight="@+id/editTextRepeatPassword" />

</RelativeLayout>
